k8s/.ipynb_checkpoints/namespace-checkpoint.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: groq-chatbot
  labels:
    app: groq-chatbot
