k8s/.ipynb_checkpoints/ingress-checkpoint.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbotai-ingress
  namespace: chatbotai
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbotai-service
                port:
                  number: 80
